syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.lazybones.speeco.grpc";
option java_outer_classname = "SpeecoProto";

package speeco;

service SpeecoInterface {
  /** Metadata Headers ***************************************************
   **********************************************************************/
  rpc speech(stream SpeechRequest) returns (stream SpeechResponse);
}

message Speech {
  bytes audio = 1;
  string text = 2;
}

message SpeechRequest {
  Speech userSpeech = 1;
}

message SpeechResponse {
  oneof speech {
    Speech userSpeech = 1;
    Speech coachSpeech = 2;
  }
}

